--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Top
 ---
 <h1>Top</h1>
-<img src="assets/img/icon.svg">
+<img src="assets/img/sakuragumiTitle.svg">
 <a href="/about">About</a>
