--- a/index.html
+++ b/index.html
@@ -2,6 +2,4 @@
 layout: default
 title: Top
 ---
-<h1>Top</h1>
-<img src="assets/img/sakuragumiTitle.svg">
-<a href="/about">About</a>
+<h1>Welcome to our homepage!</h1>
