--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: Top
+title: Home
 ---
-<h1>Welcome to our homepage!</h1>
+<h1 class="title">Welcome to our homepage!</h1>
