--- a/cm2deg.html
+++ b/cm2deg.html
@@ -7,7 +7,8 @@ script: cm2deg
 
 <h1>cm2deg</h1>
 <p>センチメートルを、タイヤの角度に変換するツールです。</p>
-<p>距離(cm) : <input type="number" placeholder="距離" id="cm" value="0"></p>
-<p>タイヤ直径(cm) : <input type="number" placeholder="タイヤ直径" id="size" value="5.2"></p>
+<div id="board">
+    <p>距離(cm) : <input type="number" placeholder="距離" id="cm" value="0"></p>
+    <p>タイヤ直径(cm) : <input type="number" placeholder="タイヤ直径" id="size" value="5.2"></p>
+</div>
 <p><output id="deg">0</output> deg</p>
-作成中
