inputのtype属性の修正

--- a/cm2deg.html
+++ b/cm2deg.html
@@ -12,13 +12,13 @@ script: cm2deg
     <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon3">距離(cm)</span>
     </div>
-    <input type="text" class="form-control" id="cm" aria-describedby="basic-addon3" value="0">
+    <input type="number" class="form-control" id="cm" aria-describedby="basic-addon3" value="0">
     </div>
     <div class="input-group mb-3">
     <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon3">タイヤ直径(cm)</span>
     </div>
-    <input type="text" class="form-control" id="size" aria-describedby="basic-addon3" value="5.2">
+    <input type="number" class="form-control" id="size" aria-describedby="basic-addon3" value="5.2">
     </div>
 </div>
 <p><output id="deg">0</output> deg</p>
