cm2degに相互変換機能追加

--- a/cm2deg.html
+++ b/cm2deg.html
@@ -20,5 +20,10 @@ script: cm2deg
     </div>
     <input type="number" class="form-control" id="size" aria-describedby="basic-addon3" value="5.6">
     </div>
+    <div class="input-group mb-3">
+    <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon3">角度(deg)</span>
+    </div>
+    <input type="number" class="form-control" id="deg" aria-describedby="basic-addon3" value="0">
+    </div>
 </div>
-<p><output id="deg">0</output> deg</p>
