結果の表示がバグる問題の修正
inputのtypeをnumberからtextに変更

--- a/cm2deg.html
+++ b/cm2deg.html
@@ -24,6 +24,6 @@ script: cm2deg
     <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon3">角度(deg)</span>
     </div>
-    <input type="number" class="form-control" id="deg" aria-describedby="basic-addon3" value="0">
+    <input type="text" class="form-control" id="deg" aria-describedby="basic-addon3" value="0">
     </div>
 </div>
