--- a/member.html
+++ b/member.html
@@ -103,7 +103,7 @@ style: member
       
       <article class="toc mentor">
         <h2>メンターT様, M様</h2>
-        <p><strong>メンターT様, M様</strong>からは、アイディアが行き詰まった時の<strong>ヒント</strong>や、メンバーが希望した日に活動出来る為の<strong>調整<strong/>を戴きました。</p>
+        <p><strong>メンターT様, M様</strong>からは、アイディアが行き詰まった時の<strong>ヒント</strong>や、メンバーが希望した日に活動出来る為の<strong>調整</strong>を戴きました。</p>
       </article>
     </section>
   </main>
